moved configuration to /lib updated gems fixed compass deprecation warnings

--- a/views/_my_url.erb
+++ b/views/_my_url.erb
@@ -5,5 +5,11 @@
       <a class="button action" href="#save_key" id="save_key">Save Key</a>
     </nav>
     
+<!--
+    <form action="fetch_key" method="post" accept-charset="utf-8">
+      <input type="password" name="master" value="" placeholder="Master password">
+      <input type="submit" value="Fetch" class="button">
+    </form>
+-->
   </section>    
 </div>
