--- a/views/stylesheets/_base.scss
+++ b/views/stylesheets/_base.scss
@@ -1,6 +1,5 @@
+@import 'compass';
 @import 'compass/reset';
-@import 'compass/utilities';
-@import 'compass/css3';
 
 $blue: #4096EE;
 
@@ -48,7 +47,7 @@ input[type=range] {
     width: 150px;
     height: 10px;
     @include border-radius(5px);
-    @include box-shadow(#222, 0, 2px, 5px, 0, inset);
+    @include box-shadow(#222 0 2px 5px 0 inset);
     margin-top: 1px !important;
 }
 
