--- a/views/stylesheets/screen.scss
+++ b/views/stylesheets/screen.scss
@@ -11,7 +11,7 @@
     padding: 20px;
     width: 40%;
     background: white;
-    @include box-shadow(#888, 0, 0, 5px);
+    @include box-shadow(#888 0 0 5px);
     line-height: 20px; } }
 
 /* FOOTER
@@ -25,7 +25,7 @@
   padding: 10px 0;
   font-size: 12px;
   color: gray;
-  @include box-shadow(#888, 0, 0, 5px);
+  @include box-shadow(#888 0 0 5px);
   ul {
     list-style: none;
     margin: 0;
