--- a/views/index.erb
+++ b/views/index.erb
@@ -15,6 +15,8 @@
         <label for="domain">Domain</label>
         <input type="url" id="domain" name="domain" value="<%= params[:domain] %>">
         <a class="clearinput">&times;</a>
+        <ul id="saved_domains">
+        </ul>
       </li>
       <li>
         <label for="secret">Secret</label>
