Prep for update

--- a/views/stylesheets/screen.scss
+++ b/views/stylesheets/screen.scss
@@ -1,5 +1,15 @@
 @import 'core';
 
+.notice {
+  width: 50%;
+  margin: 15px auto;
+  padding: 8px 35px 8px 14px;
+  color: #C09853;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #FCF8E3;
+  border: 1px solid #FBEED5;
+}
+
 /* ABOUT
 ----------------------------------*/
 
