--- a/views/layouts/layout.erb
+++ b/views/layouts/layout.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hatchpass</title>  
+  <title>Hatchpass</title>
   <meta http-equiv="cleartype" content="on">
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="icon" type="image/png" href="/images/favicon.png">	
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <link rel="stylesheet" href="/stylesheets/screen.css">
-  <% if mobile? %>  
+  <% if mobile? %>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
     <!-- For iPhone 4 with high-resolution Retina display: -->
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon.png">
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon.png">
     <!-- For nokia devices: -->
     <link rel="shortcut icon" href="/images/apple-touch-icon.png">
-  
+
     <!--iOS web app -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-startup-image" href="/images/splash.jpg">
@@ -37,8 +37,16 @@
       </nav>
   </div>
   <%# erb :about %>
-  
+
+  <div class="notice">
+    <p>
+      <strong>Hatchpass will be updating soon!</strong><br>
+      Your settings will be migrated automatically. Check out the beta now at <a href="http://beta.hatchpass.org">beta.hatchpass.org</a>.
+    </p>
+  </div>
+
+
   <%= yield %>
-  
+
 </body>
 </html>
